--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
  You should have received a copy of the GNU General Public License
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">CineLog</string>
     <string name="movie_title_input">Enter movie title.</string>
     <string name="action_settings">Settings</string>
@@ -160,5 +160,5 @@
     <string name="wishlist_cant_create_review">Error: can\'t create review</string>
     <string name="validate">Validate</string>
     <string name="no_tags_found_label">No tag found. Please verify enabled tags.</string>
-    <string name="action_share" tools:ignore="MissingTranslation">Share</string>
+    <string name="action_share">Share</string>
 </resources>
