--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,4 +165,6 @@
     <string name="action_share">Share</string>
     <string name="title_fragment_serie_room">Series (Room)</string>
     <string name="title_fragment_movie_room">Movies (Room)</string>
+    <string name="title_activity_view_room_review">Movie review (Room)\n</string>
+    <string name="title_activity_view_room_review_serie">Serie review (Room)</string>
 </resources>
