--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,4 +167,5 @@
     <string name="title_fragment_movie_room">Movies (Room)</string>
     <string name="title_activity_view_room_review">Movie review (Room)\n</string>
     <string name="title_activity_view_room_review_serie">Serie review (Room)</string>
+    <string name="tag_deleted">Tag deleted</string>
 </resources>
