[Cinelog / Room] make review lists use review async service

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -159,4 +159,5 @@
 
     <string name="action_share">Partager</string>
     <string name="tag_deleted">Tag supprimé</string>
+    <string name="list_loading_failed">Impossible de récupérer les avis</string>
 </resources>
