[Cinelog / Room] use async review service in search tmdb and review edition fragment

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -160,4 +160,5 @@
     <string name="action_share">Partager</string>
     <string name="tag_deleted">Tag supprimé</string>
     <string name="list_loading_failed">Impossible de récupérer les avis</string>
+    <string name="review_cant_edit">Erreur: impossible d\'éditer l\'avis</string>
 </resources>
