[Cinelog / Room] clean menus and room strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,7 +148,6 @@
     <string name="title_fragment_serie_episodes">Episodes</string>
     <string name="serie_episode_delete_hint">Please long click to remove watching data</string>
     <string name="nav_tags_space">Tags</string>
-    <string name="nav_tags_room_space">Tags (Room)</string>
     <string name="tags_title">Tags</string>
     <string name="tag_color">Color</string>
     <string name="tag_name">Tag name</string>
@@ -164,10 +163,7 @@
     <string name="validate">Validate</string>
     <string name="no_tags_found_label">No tag found. Please verify enabled tags.</string>
     <string name="action_share">Share</string>
-    <string name="title_fragment_serie_room">Series (Room)</string>
-    <string name="title_fragment_movie_room">Movies (Room)</string>
-    <string name="title_activity_view_room_review">Movie review (Room)\n</string>
-    <string name="title_activity_view_room_review_serie">Serie review (Room)</string>
+    <string name="title_activity_view_review">Movie review</string>
+    <string name="title_activity_view_review_serie">Serie review</string>
     <string name="tag_deleted">Tag deleted</string>
-    <string name="title_fragment_wishlist_room_movie">Wishlist item (Room)</string>
 </resources>
