[Cinelog / Room] make tag review link async

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -157,6 +157,9 @@
     <string name="wishlist_cant_create_review">Error: can\'t create review</string>
     <string name="no_tags_found_label">Aucun tag trouvé. Veuillez vérifier si des tags sont activés.</string>
 
+    <string name="cant_link_tag_to_review">Impossible de lier un tag à l\'avis. Veuillez réessayer d\'ouvrir l\'avis.</string>
+    <string name="cant_unlink_tag_to_review">Impossible de délier le tag à l\'avis. Veuillez réessayer en réouvrant l\'avis.</string>
+
     <string name="action_share">Partager</string>
     <string name="tag_deleted">Tag supprimé</string>
     <string name="list_loading_failed">Impossible de récupérer les avis</string>
