--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="import_parsing_line_error_toast">Can\'t save import movie with name %s.</string>
     <string name="import_starting_toast">Import started…</string>
     <string name="import_ending_toast">… import ended !</string>
+    <string name="import_choose_file_stop">You must choose a folder to start import</string>
+
 
     <string name="add_from_scratch_label">Can\'t find the movie ?</string>
 
@@ -168,7 +170,6 @@
     <string name="tag_deleted">Tag deleted</string>
     <string name="cant_link_tag_to_review">Cannot link a tag to the review. Please reopen review and try again</string>
     <string name="cant_unlink_tag_to_review">Cannot unlink a tag to the review. Please reopen review and try again</string>
-    <string name="acra_dialog_text">coucou</string>
     <string name="crash_mail_subject">A Cinelog crash just happened</string>
     <string name="crash_mail_body">Please describe what you were doing here (a step by step description would be perfect)</string>
     <string name="crash_dialog_text">A crash just happened. If do you agree, you can send the stacktrace to the developer. It would be really helpful to fix this crash.\n</string>
